fix: Scrollbar styling with ::-webkit-scrollbar stopped working in chrome after latest chrome 121 update

--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -37,8 +37,13 @@ html.dark {
   height: 2px;
 }
 
-* {
-  scrollbar-color: var(--c-scrollbar) var(--c-bg);
+/* Wrap new scrollbar properties in @supports rule for browsers without `::-webkit-scrollbar-*` support */
+/* This way chrome won't override `::-webkit-scrollbar-*` selectors */
+@supports not selector(::-webkit-scrollbar) {
+  * {
+    scrollbar-width: thin;
+    scrollbar-color: var(--c-scrollbar) var(--c-bg);
+  }
 }
 
 ::-webkit-scrollbar {
